opam-version: "2.0"

name: "torrent"
version: "0.1"

synopsis: ""
description: """
"""

homepage: "https://github.com/Niols/ocaml-torrent"
bug-reports: "https://github.com/Niols/ocaml-torrent/issues"

authors: [
  "Niols <niols@niols.fr>"
]

maintainer: "Niols <niols@niols.fr>"

depends: [
  "ocaml"                  {build & >= "4.08"}
  "ppx_deriving"           {build}
  "sha"
  "uri"
]
